# dilithium-poc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  roadmap.md
benches/: internals.rs  m7-criterion-results.csv  m7-results.md  param_sweep.rs  rejection.rs  sampling-results.md  sampling.rs  sign_verify.rs  signing-repetition-results.md  signing_repetitions.rs
challenges/: Cargo.toml  README.md  classroom.md  phase1.md  roadmap.md  template.md
challenges/examples/: classroom.rs  phase1.rs  transcript_smoke.rs
challenges/src/: lib.rs
challenges/src/exercises/: eta_unbounded_secret.rs  gamma1_beta_boundary_oracle.rs  gamma2_lowbits_boundary_oracle.rs  gamma2_lowbits_pruned_recovery.rs  lambda_too_short_cross_message.rs  mod.rs  nonce_reuse.rs  sampler_patterned_y.rs  toy_dense_hint_forgery.rs  toy_params_too_small.rs  verifier_no_ctilde.rs
challenges/src/exercises/phase1/: mod.rs  nonce_reuse.rs  sampler_patterned_y.rs  toy_dense_hint_forgery.rs  toy_params_too_small.rs  verifier_no_ctilde.rs  verifier_no_omega.rs  verifier_no_z_bound.rs
challenges/src/failures/: eta_unbounded_secret.rs  gamma1_beta_boundary_oracle.rs  gamma2_lowbits_boundary_oracle.rs  gamma2_lowbits_pruned_recovery.rs  lambda_too_short_cross_message.rs  mod.rs  nonce_reuse.rs  sampler_patterned_y.rs  toy_dense_hint_forgery.rs  toy_params_too_small.rs  verifier_no_ctilde.rs
challenges/src/failures/phase1/: eta_unbounded_secret.rs  mod.rs  sampler_patterned_y.rs  toy_dense_hint_forgery.rs  verifier_no_ctilde.rs  verifier_no_omega.rs  verifier_no_z_bound.rs
challenges/src/shared/: mod.rs  rng.rs  stats.rs  toy_challenge.rs  toy_search.rs  transcript.rs  truncated_challenge.rs
challenges/src/toy/: fixtures.rs  hints.rs  mod.rs  params.rs  poly.rs  signatures.rs  vector.rs
challenges/tests/: exercises_failures.rs  exercises_phase1.rs  failures.rs  feature_gate.rs  phase1.rs  toy_algebra.rs  transcript.rs
conformance/: README.md  fixtures.rs  keygen.rs  mod.rs  models.rs  pkix.rs  scope.rs  siggen.rs  sigver.rs  support.rs
conformance/acvp/ML-DSA-keyGen-FIPS204/: expectedResults.json  prompt.json
docs/: CRYSTALS_Dilithium_Clean.md  ml-dsa-failure-examples-research.md  rfc9881.txt
scripts/: extract-fips204-text.sh  fetch-acvp-mldsa-vectors.sh
src/: coefficient.rs  error.rs  hints.rs  lib.rs  params.rs  poly.rs  round.rs  tests.rs  types.rs  validation.rs  verify.rs  xof.rs
src/encoding/: bits.rs  hint.rs  mod.rs  poly.rs  shared.rs  signature.rs
src/encoding/keys/: mod.rs  private.rs  public.rs  shared.rs  types.rs
src/ml_dsa/: algebra.rs  context.rs  instrumentation.rs  keygen.rs  mod.rs  random.rs  sign.rs  verify.rs
src/ml_dsa/keygen/: algorithm.rs  mod.rs  seed.rs
src/ml_dsa/sign/: algorithm.rs  mod.rs  types.rs
src/ml_dsa/types/: mod.rs  public_key.rs  signature.rs
src/ml_dsa/verify/: algorithm.rs  mod.rs  types.rs
src/params/: constants.rs  core.rs  ids.rs  mod.rs  sets.rs  sizes.rs
src/pkix/: algorithm.rs  key_usage.rs  mod.rs  oid.rs  private_key.rs  spki.rs
src/pkix/cms/: algorithm.rs  attributes.rs  der.rs  digest.rs  encode.rs  mod.rs  oid.rs  parse.rs  types.rs  verify.rs
src/poly/: coeffs.rs  matrix.rs  mod.rs  polynomial.rs  validation.rs  vector.rs
src/poly/ntt/: domain.rs  matrix.rs  mod.rs  tables.rs  transform.rs  vector.rs
src/sampling/: challenge.rs  coefficients.rs  constants.rs  limits.rs  mod.rs  rejection.rs  report.rs  xof_reader.rs
src/sampling/expand/: a.rs  mask.rs  mod.rs  s.rs
src/tests/: algebra.rs  encoding.rs  ml_dsa.rs  mod.rs  ntt.rs  params.rs  pkix.rs  rounding.rs  sampling.rs  verify.rs
src/types/: mod.rs  private_key.rs  public_key.rs  signature.rs  validation.rs
