[package]
name = "dilithium-poc"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
pkix = ["dep:der", "dep:pkcs8", "dep:spki"]
experimental-params = []
instrumentation = []

[dependencies]
der = { version = "0.7", features = ["alloc", "oid"], optional = true }
pkcs8 = { version = "0.10", features = ["alloc"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"] }
sha3 = "0.10"
spki = { version = "0.7", features = ["alloc"], optional = true }

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "signing_repetitions"
harness = false
required-features = ["instrumentation"]
