[package]
name = "dilithium-poc"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "challenges"]
resolver = "3"

[features]
default = ["std"]
std = []
pkix = ["dep:der", "dep:pkcs8", "dep:spki"]
experimental-params = []
instrumentation = []
m7-benchmarks = ["experimental-params", "instrumentation", "pkix"]

[dependencies]
der = { version = "0.8", features = ["alloc", "oid"], optional = true }
pkcs8 = { version = "0.11", features = ["alloc"], optional = true }
getrandom = "0.4.3"
sha3 = "0.12.0"
shake = "0.1.0"
spki = { version = "0.8", features = ["alloc"], optional = true }

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bench]]
name = "sampling"
harness = false
required-features = ["m7-benchmarks"]

[[bench]]
name = "signing_repetitions"
harness = false
required-features = ["instrumentation"]

[[bench]]
name = "sign_verify"
harness = false
required-features = ["m7-benchmarks"]

[[bench]]
name = "internals"
harness = false
required-features = ["m7-benchmarks"]

[[bench]]
name = "rejection"
harness = false
required-features = ["m7-benchmarks"]

[[bench]]
name = "param_sweep"
harness = false
required-features = ["m7-benchmarks"]
