[package]
name = "dilithium-poc-challenges"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
exercises = []
failure-challenges = ["dilithium-poc/instrumentation"]

[dependencies]
dilithium-poc = { path = ".." }

[[example]]
name = "transcript_smoke"
path = "examples/transcript_smoke.rs"
required-features = ["failure-challenges"]

[[example]]
name = "phase1"
path = "examples/phase1.rs"
required-features = ["failure-challenges"]
